--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang ='en'>
   <head>
-    <title>Babby's First Bootstrap Site</title>
+    <title>Sergey Lukyanenko</title>
     <link href='css/bootstrap.css' rel='stylesheet'>
       </head>
       <body>
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="/">Babby's First Bootstrap Site</a>
+      <a class="navbar-brand" href="/">Sergey Lukyanenko</a>
     </div>  
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">About</a></li>
-        <li><a href="#">Things</a></li>
-         <li><a href="#">More Things</a></li>
+        <li><a href="#">Sergey</a></li>
+        <li><a href="#">Health</a></li>
+         <li><a href="#">Entrepreneur</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
@@ -22,22 +22,25 @@
   <div class = "container">
   <div class='row well'>
     <div class="col-md-6">
-      <h1>I'm learning Bootstrap!</h1>
-      <p>Biscuit gingerbread powder. Marshmallow donut pie lollipop sugar plum jelly beans. Jelly-o wafer cake candy cotton candy. Brownie icing gummies marshmallow bonbon I love souffle lemon drops tart. I love I love toffee. Tart jujubes candy canes. Toffee chupa chups dragee gummies chocolate bar caramels powder topping brownie. Tiramisu bear claw jelly beans halvah toffee biscuit powder. Chocolate chupa chups marzipan jelly sweet roll. Brownie pastry pie lollipop. I love jujubes fruitcake cupcake candy canes apple pie dragee. Sugar plum candy canes pastry caramels bonbon brownie chocolate. Lemon drops sugar plum cake.</p>
-      <button type="button" class="btn btn-default">This is button</button>
-      <button type="button" class="btn btn-primary">Push button</button>
+      <h1>Life Is beautiful despite your physical or emotional state</h1>
+      <p>Having reached the peak of a mountain, it is now time to enjoy the view</p>
+      <button type="button" class="btn btn-default"><a href= "https://www.facebook.com/Lukyans?ref=tn_tnmn">facebook</a></button>
+      <button type="button" class="btn btn-primary">twitter</button>
     </div>
       <div class="col-md-6">
-      <img src="daniel_goleman.jpg" class="img-responsive" alt="Responsive image">
+      <img src="sergey.jpg" class="img-responsive" alt="Responsive image">
     </div>
   </div>
 
 <div class="row text-center">
   <div class="container">
   <div class="col-md-4">
-   <i class='glyphicon glyphicon-briefcase'></i>
-    <h2>Something goes here</h2>
-    <p>Bacon ipsum dolor amet filet mignon drumstick doner chicken. Pig drumstick pork loin chicken. Cow tail brisket frankfurter flank, chuck alcatra venison pancetta sirloin. Pork belly leberkas pork loin meatloaf.</p>
+    <img src="daniel_goleman.jpg" 
+    <h2>We Must Learn to Sharpen Focus</h2>
+    <p>"We must learn to sharpen focus if we are to contend with, let alone thrive, in a complex world...
+    For more than two decades, psychologist and journalist, author of "emotional intelligence" Daniel Goleman has been scouting the leading edge of the human sciences for what's new, surprising, and important. 
+    In his new book "Focus", he delves into the science of attention in all its varieties, presenting a long overdue discussion of this little-noticed and under-rated mental asset that matters enormously for how we navigate life. 
+    Attention works much like a muscle: use it poorly and it can wither; work it well and it grows. In an era of unstoppable distractions, Goleman persuasively argues that now more than ever we must learn to sharpen focus if we are to contend with, let alone thrive, in a complex world.</p>
     <button type="button" class="btn btn-success">Bold move</button>
   </div>
 
