--- a/index.html
+++ b/index.html
@@ -28,36 +28,18 @@
       <button type="button" class="btn btn-primary">twitter</button>
     </div>
       <div class="col-md-6">
-      <img src="sergey.jpg" class="img-responsive" alt="Responsive image">
+      <img src="sergey.jpg">
     </div>
   </div>
 
-<div class="row text-center">
+<div class="row">
   <div class="container">
-  <div class="col-md-4">
     <img src="daniel_goleman.jpg" 
     <h2>We Must Learn to Sharpen Focus</h2>
     <p>"We must learn to sharpen focus if we are to contend with, let alone thrive, in a complex world...
     For more than two decades, psychologist and journalist, author of "emotional intelligence" Daniel Goleman has been scouting the leading edge of the human sciences for what's new, surprising, and important. 
     In his new book "Focus", he delves into the science of attention in all its varieties, presenting a long overdue discussion of this little-noticed and under-rated mental asset that matters enormously for how we navigate life. 
     Attention works much like a muscle: use it poorly and it can wither; work it well and it grows. In an era of unstoppable distractions, Goleman persuasively argues that now more than ever we must learn to sharpen focus if we are to contend with, let alone thrive, in a complex world.</p>
-    <button type="button" class="btn btn-success">Bold move</button>
-  </div>
-
-  <div class="col-md-4">
-    <i class='glyphicon glyphicon-repeat'></i>
-    <h2>Something else goes here</h2>
-    <p>Bacon ipsum dolor amet venison tail bacon cow frankfurter doner. Drumstick meatball capicola cupim, venison ball tip tri-tip pork chop porchetta doner. Flank shoulder fatback pastrami beef, turducken shank porchetta picanha. Fatback shoulder doner pork. Shoulder turducken tongue landjaeger.</p>  
-    <button type="button" class="btn btn-info">In Soviet Russia</button>
-  </div>
-  
-  <div class="col-md-4">
-    <i class='glyphicon glyphicon-sunglasses'></i>
-    <h2>I have no idea what I'm doing</h2>
-    <p>Bacon ipsum dolor amet tail biltong corned beef porchetta, boudin andouille swine pork chop cow chuck doner pastrami. Boudin rump ball tip, chicken swine spare ribs porchetta alcatra doner meatball brisket tongue turkey sausage chuck. Picanha jowl shankle, turkey alcatra pig frankfurter porchetta capicola turducken boudin. Ham tenderloin sirloin capicola fatback. Short loin pancetta hamburger tri-tip ribeye shankle. Tail shankle chicken salami pork chop, doner sirloin cow porchetta drumstick kevin short ribs.</p>
-    <button type="button" class="btn btn-warning">Warning</button>
-    </div>
-  </div>   
 </div>
 </body>
 </html>
