--- a/index.html
+++ b/index.html
@@ -28,13 +28,12 @@
       <button type="button" class="btn btn-primary">twitter</button>
     </div>
       <div class="col-md-6">
-      <img src="sergey.jpg">
+      <img src="daniel_goleman.jpg">
     </div>
   </div>
 
 <div class="row">
   <div class="container">
-    <img src="daniel_goleman.jpg" 
     <h2>We Must Learn to Sharpen Focus</h2>
     <p>"We must learn to sharpen focus if we are to contend with, let alone thrive, in a complex world...
     For more than two decades, psychologist and journalist, author of "emotional intelligence" Daniel Goleman has been scouting the leading edge of the human sciences for what's new, surprising, and important. 
