--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <h1>Life Is beautiful despite your physical or emotional state</h1>
       <p>Having reached the peak of a mountain, it is now time to enjoy the view</p>
       <button type="button" class="btn btn-default"><a href= "https://www.facebook.com/Lukyans?ref=tn_tnmn">facebook</a></button>
-      <button type="button" class="btn btn-primary"><a href="https://twitter.com/slukyans">twitter</button>
+      <button type="button" class="btn btn-primary"><a href="https://twitter.com/slukyans">twitter</a></button>
     </div>
       <div class="col-md-6">
       <img src="daniel_goleman.jpg">
